[package]
name = "broadcast-ip"
version = "0.1.0"
authors = ["Ryan Li <conbas2019@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
percent-encoding = "2.1.0"
reqwest = "0.10.6"
chrono = "0.4.11"
futures = "0.3.5"
tokio = { version = "0.2.21", features = ["full"] }
log = "0.4.8"
env_logger = "0.7.1"
serde_json = "1.0.55"
clap = { version = "2.33.1", features = ["yaml"] }
